--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="jumbotron text-center">
       <img src="img/WhatsApp Image 2021-08-22 at 14.15.38 (2).jpeg" alt="Mursid Setyo" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Mursid Setyo</h1>
-      <p class="lead">Mahasiswa Universitas Kristen Satya Wacana</p>
+      <p class="lead">Mahasiswa Universitas Kristen Satya Wacana Fakultas Teknologi Informasi Program Studi Sistem Informasi</p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,288L480,128L960,256L1440,96L1440,320L960,320L480,320L0,320Z"></path></svg>
     </section>
     <!--akhir jumbotron-->
