tambah form contact

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
               <img src="img/Cost-Effective-and-User-Friendly-car-parking-system-in-Hospitals.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Parking Management</h4>
-                <p class="card-text">Aplikasi  menggunakan Python dan database Mysql untuk manajemen parkir</p>
+                <p class="card-text">Aplikasi menggunakan Python dan database Mysql untuk manajemen parkir</p>
               </div>
             </div>
           </div>
@@ -98,7 +98,7 @@
               <img src="img/383e01ffeb21c9944c3cf8f9bda927c9.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Cafe Billing</h4>
-                <p class="card-text">Program Billing untuk cafe menggunakan pemrograman Python dan database Mysql </p>
+                <p class="card-text">Program Billing untuk cafe menggunakan pemrograman Python dan database Mysql</p>
               </div>
             </div>
           </div>
@@ -106,7 +106,8 @@
             <div class="card">
               <img src="img/ultimate-veggie-burger.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h4 class="fw-bolder">Website Kantin</h4>
+                <p class="card-text">Website kantin FTI dengan menggunakan Framework Laravel</p>
               </div>
             </div>
           </div>
@@ -126,20 +127,29 @@
           </div>
           <div class="row justify-content-center mb-3">
             <div class="col-md-6">
-              <form>
+              <div class="alert alert-success alert-dismissible fade show d-none my-alert" role="alert">
+                <strong>Terima Kasih! </strong>Pesan Sudah Terkirim
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+              </div>
+              <form name="Contact-Form">
                 <div class="mb-3">
                   <label for="name" class="form-label">Nama Lengkap</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name" />
+                  <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
                 </div>
                 <div class="mb-3">
                   <label for="email" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="email" aria-describedby="email" />
+                  <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
                 </div>
                 <div class="mb-3">
                   <label for="pesan1" class="form-label">Pesan</label>
-                  <textarea class="form-control" id="pesan" rows="3"></textarea>
+                  <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
                 </div>
-                <button type="submit" class="btn btn-primary">Kirim</button>
+                <button type="submit" class="btn btn-primary btn-kirim">Kirim</button>
+
+                <button class="btn btn-primary btn-loading d-none" type="button" disabled>
+                  <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                  Loading...
+                </button>
               </form>
             </div>
           </div>
@@ -154,5 +164,32 @@
     </footer>
     <!--akhir footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbxbfeieAdL7PupweUPTzgvwDnEErVElt1PeHy9iLqrA5EJA4AwY4jc7IVtB_4PV2i6dnQ/exec";
+      const form = document.forms["Contact-Form"];
+
+      const btnKirim = document.querySelector(".btn-kirim");
+      const btnLoading = document.querySelector(".btn-loading");
+      const myAlert = document.querySelector(".my-alert");
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        //ketika tombolsubmit diklik
+        //tampilkan tombol loading,hilangkan tbl kirim
+        btnLoading.classList.toggle("d-none");
+        btnKirim.classList.toggle("d-none");
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            //tampilkan alert
+            myAlert.classList.toggle('d-none')
+            console.log("Success!", response);
+            //reset form
+            form.reset();
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
   </body>
 </html>
