--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <!-- Required meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--AOS-->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous" />
@@ -55,10 +57,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos, itaque at sint numquam quas tenetur tempora nostrum laborum rerum repellat nemo fugit natus explicabo fugiat doloremque. Nihil quae ipsum eos!</p>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-4" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine" data-aos-duration="1000">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem libero voluptatibus atque quam, odio magni aliquid sit repudiandae laborum quaerat quisquam dolorum, quasi est quos?</p>
           </div>
         </div>
@@ -76,7 +78,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500">
               <img src="img/2apps.60768.13510798882796654.84cd12bc-a813-4d42-916f-3fe824c0c9bf.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Kamus Indonesia-Inggris</h4>
@@ -85,7 +87,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="100">
               <img src="img/Cost-Effective-and-User-Friendly-car-parking-system-in-Hospitals.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Parking Management</h4>
@@ -94,7 +96,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="200">
               <img src="img/383e01ffeb21c9944c3cf8f9bda927c9.png" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Cafe Billing</h4>
@@ -103,7 +105,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="500" data-aos-delay="300">
               <img src="img/ultimate-veggie-burger.jpg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <h4 class="fw-bolder">Website Kantin</h4>
@@ -164,6 +166,21 @@
     </footer>
     <!--akhir footer-->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        once: true,
+      });
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script>
+      gsap.from('.jumbotron img',{duration :1,rotateY:360,opacity :0, });
+      gsap.from('.navbar',{duration:1.5,y:'-100%',opacity:0,ease:'bounce'});
+      gsap.from('.display-4',{duration:1,x:-50,opacity:0,delay:0.5,ease:'back'});
+    </script>
+
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbxbfeieAdL7PupweUPTzgvwDnEErVElt1PeHy9iLqrA5EJA4AwY4jc7IVtB_4PV2i6dnQ/exec";
       const form = document.forms["Contact-Form"];
@@ -183,7 +200,7 @@
             btnLoading.classList.toggle("d-none");
             btnKirim.classList.toggle("d-none");
             //tampilkan alert
-            myAlert.classList.toggle('d-none')
+            myAlert.classList.toggle("d-none");
             console.log("Success!", response);
             //reset form
             form.reset();
