--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section class="jumbotron text-center">
       <img src="img/WhatsApp Image 2021-08-22 at 14.15.38 (2).jpeg" alt="Mursid Setyo" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Mursid Setyo</h1>
-      <p class="lead">Mahasiswa Universitas Kristen Satya Wacana Fakultas Teknologi Informasi Program Studi Sistem Informasi</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#fff" fill-opacity="1" d="M0,288L480,128L960,256L1440,96L1440,320L960,320L480,320L0,320Z"></path></svg>
     </section>
     <!--akhir jumbotron-->
@@ -175,7 +175,10 @@
     </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
     <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to('.lead',{duration:2,delay:1, text:'Mahasiswa Sistem Informasi | Fakultas Teknologi Informasi | Universitas Kristen Satya Wacana'})
       gsap.from('.jumbotron img',{duration :1,rotateY:360,opacity :0, });
       gsap.from('.navbar',{duration:1.5,y:'-100%',opacity:0,ease:'bounce'});
       gsap.from('.display-4',{duration:1,x:-50,opacity:0,delay:0.5,ease:'back'});
